@@ -89,7 +89,7 @@ int main(int argc, char* argv[])
          if ( gdcmBinEntry* b = dynamic_cast<gdcmBinEntry*>(d) )
          {              
             copy->GetHeader()->ReplaceOrCreateByNumber( 
-                                 b->GetVoidArea(),
+                                 b->GetBinArea(),
                                  b->GetLength(),
                                  b->GetGroup(), 
                                  b->GetElement(),
