@@ -1,7 +1,9 @@
 2004-09-23 Jean-Pierre Roux
   * FIX In order not to be poluted any longer by casting problems,
     the member VoidArea of gdcmBinEntry is now uint8_t* (instead of void *)
-	 we can now delete[] it safely 
+	 we can now delete[] it safely 	
+  * VoidArea is now called BinArea (less confusing name),
+    and all the methods called ...VoidArea... are now ... BinArea...
 
 2004-09-22 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
   * src/gdcmDocument.cxx: gdcmDocument::~gdcmDocument() doesn't clear (nor
